--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Eric Kumasaka</title>
 </head>
 <body>
   <main class="testimonials">
@@ -18,8 +18,8 @@
       <div class="profile-name">
         <p>Daniel Clifford Verified Graduate</p>
       </div>
-      <h3>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
-        in the company I joined. I honestly feel I got every penny’s worth.</h3>
+      <h1>I received a job offer mid-course, and the subjects I learned were current, if not more so, 
+        in the company I joined. I honestly feel I got every penny’s worth.</h1>
 
       <p>“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a 
         transition and have heard some people who had an amazing experience here. I signed up 
@@ -34,7 +34,7 @@
       <div class="profile-name">
         <p>Jonathan Walters Verified Graduate</p>
       </div>
-      <h3>The team was very supportive and kept me motivated</h3>
+      <h1>The team was very supportive and kept me motivated</h1>
 
       <p>“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
         for a big company. This was one of the best investments I’ve made in myself. ”</p>
@@ -46,7 +46,7 @@
       <div class="profile-name profile-name--modify">
         <p>Kira Whittle Verified Graduate</p>
       </div>
-      <h3>Such a life-changing experience. Highly recommended!</h3>
+      <h1>Such a life-changing experience. Highly recommended!</h1>
 
       <p>“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
         professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
@@ -64,7 +64,7 @@
       <div class="profile-name">
         <p>Jeanette Harmon Verified Graduate</p>
       </div>
-      <h3>An overall wonderful and rewarding experience</h3>
+      <h1>An overall wonderful and rewarding experience</h1>
 
       <p>" Thank you for the wonderful experience! I now have a job I really enjoy and make a good living while doing something I love. "</p>
     </article>
@@ -75,8 +75,8 @@
       <div class="profile-name">
         <p>Patrick Abrams Verified Graduate</p>
       </div>
-      <h3>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
-        learning from their experiences was easy.</h3>
+      <h1>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and 
+        learning from their experiences was easy.</h1>
 
       <p>“ The staff seem genuinely concerned about my progress which I find really refreshing. The program 
         gave me the confidence necessary to be able to go out in the world and present myself as a capable 
